2017-09-09  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix display of segment lines.

	`af_glyph_hints_get_segment_offset' now returns values in font
	units.  Previously, values were scaled to the device resolution but
	with x height correction applied, which caused a mismatch to the
	displayed unhinted outlines.

	* src/ftgrid.c (grid_hint_draw_segment): Add new argument for
	`FT_Size' object.
	Scale return values of `af_glyph_hints_get_segment_offset' manually.
	(grid_status_draw_outline): Updated.

2017-09-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/{ftdump.c,ftcommon.c} (PanicZ): Handle error messages.

2017-08-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Decorate with glyph names.

2017-07-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Tweak adjustment of spacing.

	The advance width rounding in light hinting is reflected in
	`rsb_delta' and ranges from -31 to 32. These conventional limits
	should also define when the spacing adjustment is warranted.

	* src/ftcommon.c (string_load): Tweak conditionals.

2017-06-29  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_Stroke): Avoid memory leaks.

2017-06-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] List SFNT tables.

	* src/ftdump.c (Print_Sfnt_Tables): New feature, list SFNT tables with
	their first 4 bytes with version for some tables.
	(usage, main): Updated.

	* src/ftdump.1: Updated

2017-06-22  Werner Lemberg  <wl@gnu.org>

	[compos] Make it compile.

	* src/compos.c (FT2_BUILD_LIBRARY): Define; we need access to
	FT_SubGlyphRec.
	Include FT_INTERNAL_GLYPH_LOADER_H.
	(main): Updated.

2017-06-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Draw_Header): Simplify.

2017-06-10  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Draw_Header): Fix compiler warning.

2017-06-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (event_encoding_change, main): Minor updates.
